[package]
version = "0.2.1"
name = "recorder"
description = "Generate data-only structs with utilities easily"
authors = ["Kot"]
homepage = "https://github.com/kotx/recorder"
repository = "https://github.com/kotx/recorder.git"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
